Added titles to report

--- a/report/main.tex
+++ b/report/main.tex
@@ -152,10 +152,16 @@ sorting=none,
 
 % \include{listings/settings}
 \include{chapters/0_Frontespizio}
-
 \tableofcontents
 
-\include{chapters/test}
+
+\include{chapters/1_Introduction}
+\include{chapters/2_Architecture}
+\include{chapters/3_VHDL}
+\include{chapters/4_Verification}
+\include{chapters/5_Synthesis}
+\include{chapters/6_Vivado}
+\include{chapters/7_Conclusion}
 
 \nocite{*}
 \printbibliography
