--- a/report/listings/settings.tex
+++ b/report/listings/settings.tex
@@ -9,14 +9,14 @@
     baselinestretch=0.9
 }
 
-\setlength{\abovecaptionskip}{-4pt} 
+\setlength{\abovecaptionskip}{-2pt} 
 \setlength{\belowcaptionskip}{8pt} 
 
 \newenvironment{code}
     {\captionsetup{type=listing}}
     {\par\noindent\ignorespacesafterend}
 
-\SetupFloatingEnvironment{listing}{name=Codice, listname=Elenco dei codici}
+\SetupFloatingEnvironment{listing}{name=Listing, listname=List of Listings}
 
 \usemintedstyle{sas}
 % \usemintedstyle{unipi}
@@ -25,6 +25,3 @@
 
 % Interlinea
 \setstretch{1.1}
-
-
-
