--- a/report/main.tex
+++ b/report/main.tex
@@ -6,7 +6,7 @@
 % Dimensione del font
 \usepackage[fontsize=12pt]{scrextend}
 % Lingua del testo
-\usepackage[italian]{babel}
+\usepackage[italian,english]{babel}
 % Lingua per la bibliografia
 % \usepackage[fixlanguage]{babelbib}
 % Codifica del testo
@@ -145,7 +145,7 @@ sorting=none,
 \begin{document}
 
 \setlength{\fboxsep}{0pt}
-\selectlanguage{italian}
+\selectlanguage{english}
 
 % \hyphenpenalty=10000
 % \exhyphenpenalty=10000
