added chapter with errors

--- a/report/main.tex
+++ b/report/main.tex
@@ -80,7 +80,12 @@ sorting=none,
 % dopo minted
 \usepackage{csquotes}
 
+% subfigures
+\usepackage{subcaption}
 
+% commento
+\newcommand{\cna}[1]{{\textcolor{red}[\textcolor{red}{\bf{Avena: }}{\textcolor{red}{#1}\textcolor{red}]}}}
+\newcommand{\cadm}[1]{\textcolor{cyan}[{\textcolor{cyan}{\bf{Trenitalia: }}{\textcolor{cyan}{#1}\textcolor{cyan}]}}}
 
 % Modifica lo stile dell'header
 \pagestyle{fancy}
