latex and shift

--- a/report/main.tex
+++ b/report/main.tex
@@ -83,6 +83,9 @@ sorting=none,
 % subfigures
 \usepackage{subcaption}
 
+%ps to pdf
+\usepackage{auto-pst-pdf}
+
 % commento
 \newcommand{\cna}[1]{{\textcolor{red}[\textcolor{red}{\bf{Avena: }}{\textcolor{red}{#1}\textcolor{red}]}}}
 \newcommand{\cadm}[1]{\textcolor{cyan}[{\textcolor{cyan}{\bf{Trenitalia: }}{\textcolor{cyan}{#1}\textcolor{cyan}]}}}
@@ -167,9 +170,8 @@ sorting=none,
 \include{chapters/2_Architecture}
 \include{chapters/3_VHDL}
 \include{chapters/4_Verification}
-\include{chapters/5_Synthesis}
-\include{chapters/6_Vivado}
-\include{chapters/7_Conclusion}
+\include{chapters/5_Vivado}
+\include{chapters/6_Conclusion}
 
 \nocite{*}
 \printbibliography
