--- a/report/main.tex
+++ b/report/main.tex
@@ -85,8 +85,8 @@ sorting=none,
 % subfigures
 \usepackage{subcaption}
 
-%ps to pdf
-% \usepackage{auto-pst-pdf}
+%figures
+\usepackage{circuitikz}
 
 % commento
 \newcommand{\cna}[1]{\textcolor{red}{[\bfseries Avena: #1]}}
